[gd_scene load_steps=8 format=3 uid="uid://ceixtg3w46q44"]

[ext_resource type="Script" uid="uid://bnii18rnbvuuj" path="res://ui/menu/lvl_up/lvl_up_choice.gd" id="1_q7o8g"]
[ext_resource type="Texture2D" uid="uid://cbo8m4jeqh14k" path="res://assets/sprites/player/player.png" id="1_rltgd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pk3ru"]
resource_local_to_scene = true
bg_color = Color(0, 0, 0, 0.313726)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rltgd"]
bg_color = Color(0, 0, 0, 0.313726)

[sub_resource type="LabelSettings" id="LabelSettings_rltgd"]
font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_q7o8g"]
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7o8g"]
bg_color = Color(0.140829, 0.424203, 0.765036, 1)

[node name="LvlUpChoice" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(300, 450)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_q7o8g")

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pk3ru")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
process_mode = 3
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rltgd")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Sprite" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
texture = ExtResource("1_rltgd")
stretch_mode = 5

[node name="StatName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
text = "Stat name"
label_settings = SubResource("LabelSettings_rltgd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "LABEL_STAT_NAME_DESCRIPTION"
horizontal_alignment = 1

[node name="ModifierValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
text = "+12.3"
label_settings = SubResource("LabelSettings_q7o8g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q7o8g")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Panel"]
process_mode = 3
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Panel/MarginContainer"]
process_mode = 3
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Panel/MarginContainer/CenterContainer"]
process_mode = 3
layout_mode = 2
text = "LABEL_CHOOSE"

[connection signal="focus_entered" from="PanelContainer" to="." method="_on_panel_container_focus_entered"]
[connection signal="focus_exited" from="PanelContainer" to="." method="_on_panel_container_focus_exited"]
[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
